# TFM_AlejandroMir

./: .editorconfig  .gitmodules  02d.ipynb  README.md  biblio.md  class.py  pyproject.toml  requirements.txt  utils.py
.devcontainer/: devcontainer.json
Lecciones/: 01.ipynb  02.ipynb  02b.ipynb  02c.ipynb  02d.ipynb  02e.ipynb  02f.ipynb  02f.py  02g.ipynb  02h.ipynb  03.ipynb  04.ipynb  05.ipynb  06.ipynb  06a.ipynb  06b.ipynb  06c.ipynb  06d.ipynb  06e.ipynb  06f.ipynb  07.ipynb  08.ipynb  09.ipynb  NN.pth  RD_SM.yaml  README.md  wilson_01.json
vscode/: README.md  annotations.md  debug.md  docker.md  github.md  liveshare.md  paquetes.md  prueba.py  tests.md  venv.md  vscode.md
