[tool.poetry]
name = "tfm-alejandromir"
version = "0.1.0"
description = "Material adicional para el TFM de Alejandro Mir"
authors = ["Jorge Alda, Siannah Penaranda, Alejandro Mir"]
readme = "README.md"
packages = [{include = "tfm_alejandromir"}]

[tool.poetry.dependencies]
python = "^3.10"
flavio = "^2.3.3"
wilson = "^2.3.2"
ipykernel = "^6.23.1"
h5py = "^3.8.0"
iminuit = "^2.21.3"
matplotlib = "^3.7.1"
xgboost = "^2.0.0"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
graphviz = "^0.20.1"
shap = "^0.43.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
